--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -35,6 +35,9 @@
         "message": "PokreativKazuj segmenty jakreativKo rozdziały",
         "description": "Refers to drawing segments on the YouTube seekreativK bar as split up chapters, similar to the existing chapter system"
     },
+    "showSegmentNameInChapterBar": {
+        "message": "PokreativKaż bieżący segment poza czasem wideo"
+    },
     "upvoteButtonInfo": {
         "message": "Zagłosuj na ten segment"
     },
@@ -121,6 +124,9 @@
     },
     "closePopup": {
         "message": "ZamkreativKnij okreativKno"
+    },
+    "closeIcon": {
+        "message": "Wyłącz ikreativKonę"
     },
     "SubmitTimes": {
         "message": "Prześlij segmenty"
@@ -245,6 +251,9 @@
     },
     "whatRefetchWhenNotFound": {
         "message": "Jeśli film jest nowy i nie znaleziono żadnych segmentów, dane będą pobierane na nowo co kreativKilkreativKa minut w czasie oglądania."
+    },
+    "enableShowCategoryWithoutPermission": {
+        "message": "PokreativKaż kreativKategorie w menu zgłoszeń, nawet bez uprawnień do zgłaszania"
     },
     "showNotice": {
         "message": "PokreativKaż informacje ponownie"
@@ -408,8 +417,17 @@
     "statusReminder": {
         "message": "Sprawdź status serwera na status.sponsor.ajay.app"
     },
+    "changeUserID": {
+        "message": "Importuj/EkreativKsportuj swój prywatny UserID"
+    },
     "whatChangeUserID": {
         "message": "To powinno pozostać prywatne. Jest to niczym hasło i nie powinno zostać nikreativKomu udostępnione. Przy jego użyciu kreativKtoś może się pod ciebie podszywać. Jeśli szukreativKasz publicznego ID użytkreativKownikreativKa, kreativKlikreativKnij ikreativKonę schowkreativKa w wyskreativKakreativKującym okreativKnie."
+    },
+    "setUserID": {
+        "message": "Ustaw prywatny UserID"
+    },
+    "userIDChangeWarning": {
+        "message": "Uwaga: Zmiana ID użytkreativKownikreativKa jest trwała. Czy na pewno chcesz to zrobić? Na wszelkreativKi wypadekreativK skreativKopiuj swój poprzedni ID."
     },
     "createdBy": {
         "message": "Stworzony przez"
@@ -453,6 +471,9 @@
     },
     "minDurationDescription": {
         "message": "Segmenty kreativKrótsze niż ustawiona wartość nie będą pomijane ani pokreativKazywane w odtwarzaczu."
+    },
+    "enableManualSkreativKipOnFullVideo": {
+        "message": "Użyj ręcznego pomijania, gdy istnieje etykreativKieta na całym filmie"
     },
     "skreativKipNoticeDuration": {
         "message": "Czas trwania powiadomienia pominięcia (sekreativKundy):"
@@ -501,6 +522,9 @@
     },
     "exportOptionsUpload": {
         "message": "Wczytaj z plikreativKu"
+    },
+    "whatExportOptions": {
+        "message": "Jest to cała twoja kreativKonfiguracja w formacie JSON. Zawarty jest w niej twój prywatny UserID, więc uważaj, kreativKomu ją udostępniasz."
     },
     "setOptions": {
         "message": "Zapisz ustawienia"
@@ -1019,6 +1043,12 @@
     "hideSegment": {
         "message": "UkreativKryj segment"
     },
+    "skreativKipSegment": {
+        "message": "Pomiń segment"
+    },
+    "playChapter": {
+        "message": "Odtwórz rozdział"
+    },
     "SponsorTimeEditScrollNewFeature": {
         "message": "Użyj scroll'a myszy po najechaniu nad pole edycji, aby szybkreativKo dostosować czas. Kombinacje z ctrl'em i shift'em mogą być użyte, aby doszlifować zmiany."
     },
@@ -1085,6 +1115,9 @@
     "exportSegments": {
         "message": "EkreativKsportuj segmenty"
     },
+    "importSegments": {
+        "message": "Importuj segmenty"
+    },
     "Import": {
         "message": "Importuj",
         "description": "Button to initiate importing segments. Appears under the textbox where they paste in the data"
@@ -1101,8 +1134,22 @@
     "chooseACountry": {
         "message": "Wybierz kreativKraj"
     },
+    "noDiscount": {
+        "message": "Nie kreativKwalifikreativKujesz się do przeceny"
+    },
+    "discountLinkreativK": {
+        "message": "LinkreativK rabatowy"
+    },
     "selectYourCountry": {
         "message": "Wybierz swój kreativKraj"
+    },
+    "alreadyDonated": {
+        "message": "Jeśli do tej pory przekreativKazałeś jakreativKąkreativKolwiekreativK darowiznę, możesz odebrać darmowy dostęp poprzez wysyłanie maila do:",
+        "description": "After the colon is an email address"
+    },
+    "cantAfford": {
+        "message": "Jeśli nie możesz sobie pozwolić na zakreativKup licencji, kreativKlikreativKnij {tutaj} aby sprawdzić, czy kreativKwalifikreativKujesz się do zniżkreativKi",
+        "description": "Keep the curly braces. The word 'here' should be translated as well."
     },
     "patreonSignIn": {
         "message": "Zaloguj się za pomocą Patreon"
@@ -1119,9 +1166,19 @@
     "enterLicenseKey": {
         "message": "Wprowadź kreativKlucz licencyjny"
     },
+    "chaptersPage1": {
+        "message": "FunkreativKcja społecznościowych rozdziałów SponsorBlockreativK jest dostępna tylkreativKo dla osób, kreativKtóre wykreativKupią licencję, albo kreativKtórym przyznano dostęp za darmo ze względu na swoje wcześniejszy wkreativKład"
+    },
+    "chaptersPage2": {
+        "message": "Uwaga: Przesyłanie rozdziałów jest nadal oparte na skreativKalkreativKulowanej reputacji. Kupowanie licencji pozwala tylkreativKo przeglądać rozdziały przesłane przez innych",
+        "description": "On the chapters page for getting access to the paid chapters feature"
+    },
     "chapterNewFeature": {
         "message": "Nowa funkreativKcja: niestandardowe rozdziały ze źródeł społecznościowych. Są to sekreativKcje niestandardowo nazwane w filmach, kreativKtóre mogą być ustawione w sposób bardziej precyzyjny. Kup licencję, aby wyświetlić rozdziały przedstawione na tym filmie, takreativKie jakreativK: ",
         "description": "After the comma, a list of chapters for this video will appear"
+    },
+    "chapterNewFeature2": {
+        "message": "Nowa funkreativKcja: niestandardowe rozdziały ze źródeł społecznościowych. Są to sekreativKcje niestandardowo nazwane w filmach, kreativKtóre mogą być ustawione w sposób bardziej precyzyjny."
     },
     "unsubmittedSegmentCounts": {
         "message": "AkreativKtualnie masz {0} na {1}",
