--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -116,6 +116,9 @@
     "connectionError": {
         "message": "Ühendusega esines tõrge. VeakreativKood: "
     },
+    "segmentsStillLoading": {
+        "message": "Segmendid on veel laadimas..."
+    },
     "clearTimes": {
         "message": "Tühjenda segmendid"
     },
@@ -706,6 +709,9 @@
     "category_chapter": {
         "message": "PeatükreativKkreativK"
     },
+    "category_chapter_guideline1": {
+        "message": "Ära maini sponsorite brändi nimesid"
+    },
     "category_livestream_messages": {
         "message": "OtseülekreativKanne: annetuste ja sõnumite lugemine"
     },
@@ -913,6 +919,9 @@
     },
     "helpPageReviewOptions": {
         "message": "Palun vaata allolevad valikreativKud üle"
+    },
+    "helpPageFeatureDisclaimer": {
+        "message": "Paljud funkreativKtsioonid on vaikreativKimisi välja lülitatud. Kui sa soovid jätta vahele vaheaejad, kreativKasutada Invidioust jms, lülita need allpool sisse. Sa saad kreativKa peita/kreativKuvada kreativKasutajaliidese elemente."
     },
     "helpPageHowSkreativKippingWorkreativKs": {
         "message": "Kuidas vahelejätmine töötab"
@@ -1140,5 +1149,8 @@
     },
     "exportSegmentsAsURL": {
         "message": "Jaga URLina"
+    },
+    "segmentFetchFailureWarning": {
+        "message": "Hoiatus: Server ei ole veel segmentidega vastanud. Sellel videol võivad juba olla saadetud segmendid, aga sa ei ole veel neid serveri vea tõttu saanud."
     }
 }
