--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -116,6 +116,9 @@
     "connectionError": {
         "message": "Nastala chyba pripojenia. Kód chyby: "
     },
+    "segmentsStillLoading": {
+        "message": "Segmenty sa ešte nahrávajú..."
+    },
     "clearTimes": {
         "message": "Zmazať segmenty"
     },
@@ -1060,5 +1063,8 @@
     "chapterNewFeature": {
         "message": "Nová funkreativKcia: Crowd-sourcované vlastné kreativKapitoly. Toto sú sekreativKcie videa s vlastnými názvami, kreativKtoré môžu byť pre väčšiu presnosť vyskreativKladané. AkreativK si kreativKúpite licenciu, uvidíte kreativKapitoly v tomto videu, akreativKo napr.: ",
         "description": "After the comma, a list of chapters for this video will appear"
+    },
+    "segmentFetchFailureWarning": {
+        "message": "Varovanie: Zo servera sa ešte nenahrali segmenty. V tomto videu už môžu byť vytvorené segmenty, ale vzhľadom na problémy so serverom ešte nemuseli byť nahraté."
     }
 }
